<?xml version="1.0"?>
<package>
  <name>test_baxter_utils</name>
  <version>0.0.0</version>
  <description>The test_baxter_utils package</description>
  <maintainer email="ghanim@todo.todo">ghanim</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>baxter_mover_utils</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>eigen_stl_containers</build_depend>
  <build_depend>fcl</build_depend>
  <build_depend version_gte="0.3.4">geometric_shapes</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>libconsole-bridge-dev</build_depend>
  <build_depend>liburdfdom-dev</build_depend>
  <build_depend>liburdfdom-headers-dev</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <build_depend>random_numbers</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rostime</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>shape_msgs</build_depend>
  <build_depend>srdfdom</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <run_depend>eigen</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>eigen_stl_containers</run_depend>
  <run_depend>fcl</run_depend>
  <run_depend version_gte="0.3.4">geometric_shapes</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>libconsole-bridge-dev</run_depend>
  <run_depend>liburdfdom-dev</run_depend>
  <run_depend>liburdfdom-headers-dev</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>octomap_msgs</run_depend>
  <run_depend>random_numbers</run_depend>
  <run_depend>rostime</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>srdfdom</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>baxter_mover_utils</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
